# Mamformer

./: LICENSE
mamformer 671b/: GPU test.txt  pyproject.toml  requirements.txt  run.bat  train.txt
mamformer 671b/.claude/: settings.local.json
mamformer 671b/configs/: 7b.yaml  data_mix.yaml  pro-7b.yaml  ultra-371b.yaml  ultra-37b.yaml  ultra-671b-max.yaml  ultra-7b-dense.yaml  ultra-7b.yaml
mamformer 671b/configs/distributed/: ultra-671b-64gpu.yaml
mamformer 671b/data/raw/: train.jsonl
mamformer 671b/mamformer/: __init__.py  chat.py  config.py  generation.py  model.py  reflection.py  rewards.py  tokenizer.py
mamformer 671b/mamformer/kernels/: __init__.py  flash_attention.py  triton_ssd.py
mamformer 671b/mamformer/layers/: __init__.py  attention.py  communicative_moe.py  dsa.py  ffn.py  hybrid.py  kda_diff.py  mamba2.py  math_opt.py  moe.py  mtp.py  norm.py  rope.py  st_moe.py
mamformer 671b/mamformer/parallelism/: __init__.py  coordinator.py  diagnostics.py  expert_parallel.py  pipeline_parallel.py  tensor_parallel.py
mamformer 671b/scripts/: data_pipeline.py  evaluate.py  generate.py  prepare_data.py  profile_model.py  run_dist_test.py  test_all.py  train.py  train_distributed.py  train_grpo.py
mamformer 671b/tests/: test_attention.py  test_communicative_moe.py  test_distributed_cpu.py  test_dsa.py  test_generation.py  test_hybrid.py  test_mamba2.py  test_model.py  test_moe.py  test_mtp.py  test_norm.py  test_st_moe.py
